<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_myTrips"
            android:icon="@drawable/menu_user"
            android:title="@string/my_trips" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/menu_favorited"
            android:title="@string/favorite" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/menu_chat"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/menu_likeme"
            android:title="@string/feedback" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/menu_about"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/menu_setting"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_tour"
            android:icon="@drawable/tour"
            android:title="@string/tour" />
    </group>

</menu>
